--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,14 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Hello Tuten
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
+  Hello Tuten with Ionic
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    Making use of the API, the <a href="https://dev.tuten.cl/TutenREST">TutenREST</a>.
   </p>
 </ion-content>
