--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,11 +21,27 @@
         Último inicio de sesión: {{userData.lastLogin | date:'dd-MM-yyyy HH:mm:ss'}}
       </ion-item>
       <ion-item detail-push>
-        Mi sessionTokenBck es: {{userAPI.sessionTokenBck}}
+        El sessionTokenBck es: {{userAPI.sessionTokenBck}}
       </ion-item>
       <button color="danger" ion-button (click)="logout()">Cerrar sesión</button>
     </ion-col>
     <ion-col></ion-col>
     <ion-col></ion-col>
   </ion-row>
+  <h2>Bookings</h2>
+  <ion-searchbar [(ngModel)]="searchBoookingId" (ionInput)="setFilter()" placeholder="Introducir BookingId"></ion-searchbar>
+  <div class="row header">
+      <div class="col">BookingId</div>
+      <div class="col">Cliente</div>
+      <div class="col">Fecha de Creación</div>
+      <div class="col">Dirección</div>
+      <div class="col">Precio</div>
+    </div>
+    <div class="row body" *ngFor="let book of bookingData">
+      <div class="col">{{book.bookingId}}</div>
+      <div class="col">{{book.tutenUserClient.firstName}} {{book.tutenUserClient.lastName}}</div>
+      <div class="col">{{book.bookingTime}}</div>
+      <div class="col">{{book.locationId.streetAddress}}</div>
+      <div class="col">{{book.bookingPrice}}</div>
+    </div>
 </ion-content>
